--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -629,7 +629,7 @@ h1 {
   position: absolute;
   top: 50%;
   left: 70%; /* Adjust the percentage as needed */
-  transform: translate(-50%, -50%);
+  transform: translate(-41%, -50%);
   font-size: 12px;
   color: #ffffff; /* Adjust text color */
   transition: left 0.4s ease; /* Transição suave para o movimento do texto */
@@ -643,13 +643,12 @@ h1 {
   left: 4px;
   bottom: 4px;
   background-color: white;
-  background-image: url('img/logo-olho.png');
+  background-image: url('../img/logo-olho.png');
   background-repeat: no-repeat;
   background-size: 60%;
   background-position: center; /* Center the background image */
   transition: .4s;
 }
-
 
 input:checked + .slider {
   background-color: #484444; /* Mudança para preto quando ativado */
@@ -669,7 +668,7 @@ input:checked + .slider:before {
 }
 
 .slider.round:before {
-  border-radius: 50%;
+  border-radius: 50%
 }
 
 input:checked + .slider .slider-text {
