--- a/CSS/CEP.css
+++ b/CSS/CEP.css
@@ -345,7 +345,7 @@ form {
 .inputBox label {
   font-weight: bold;
   margin-bottom: 5px;
-  color: #45a049;
+  color: #000000;
 }
 
 .inputBox input {
@@ -364,7 +364,7 @@ form {
 button[type="submit"],
 .button-link {
   padding: 10px 20px;
-  background-color: #4CAF50;
+  background-color: #000000;
   color: white;
   border: none;
   border-radius: 4px;
@@ -373,11 +373,12 @@ button[type="submit"],
   text-decoration: none;
   display: inline-block;
   margin-top: 10px;
+  transition: 0.8s;
 }
 
 button[type="submit"]:hover,
 .button-link:hover {
-  background-color: #45a049;
+  background-color: #777777;
 }
 
 
@@ -506,7 +507,7 @@ button[type="submit"]:hover,
 body {
   font-family: Arial, sans-serif;
   color: #ffffff;
-  background-color: rgb(24, 61, 13);
+  background-color: rgb(49, 49, 49);
   transition: color 0.5s ease, background-color 0.5s ease; /* Adicionando transição suave */
 }
 
