--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -741,7 +741,13 @@ input:checked + .slider .slider-text {
   color: #000000;
 }
 
+.dark-mode .footer__title{
+  color: #000000;
+}
 
+.dark-mode .footer__link{
+  color: #373535;
+}
 
 
 
@@ -957,3 +963,5 @@ input:checked + .slider .slider-text {
   font-size: 20px;
   color: #ffffff;
 }
+
+
