salvando alterações novas

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -318,7 +318,7 @@ img {
 
 .icon-fone{
   width: 7%;
-  background-color: #ff0000;
+  /* background-color: #ff0000; */
 }
 
 /*=============== SPONSOR ===============*/
